# ripen_cversion

./: CMakeLists.txt  README.md  Untitled-2.nb  good.txt  main.cpp  mdsimulate  run.sh
head/: md.h  myrandom.h  particle.h
src/: fire.cpp  md.cpp
